<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/red"
    tools:context=".SamadActivity" >

    <Button
        android:id="@+id/ButtonStart"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="576dp"
        android:onClick="startAnimation"
        android:text="@string/startframe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Button>

    <Button
        android:id="@+id/CameraButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Camera"

        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonStop"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="576dp"
        android:onClick="stopAnimation"
        android:text="@string/stopframe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Button>

    <ImageView
        android:id="@+id/imageViewBanana"
        android:layout_width="182dp"
        android:layout_height="288dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="212dp"
        android:contentDescription="@string/bananadance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>
